--- a/lesson2/views/about.html
+++ b/lesson2/views/about.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>About us</h1>
+    <nav>
+        <a href="/">Homepage</a>
+        <a href="/about">About page</a>
+    </nav>
     <p>Welcome. <br /> Want to know more? Stay tuned</p>
 </body>
 </html>
