--- a/lesson2/views/index.html
+++ b/lesson2/views/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Working with servers now!!</h1>
+    <nav>
+        <a href="/">Homepage</a>
+        <a href="/about">About page</a>
+    </nav>
     <p>It's going to be awesome...</p>
 </body>
 </html>
