--- a/lesson2/views/create.ejs
+++ b/lesson2/views/create.ejs
@@ -1,34 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecode's Blogs | <%= title %></title>
-</head>
+    <%- include('./partials/head.ejs')  %>
 <body>
-    <nav>
-        <div>
-            <a href="/">Ecode's Blog</a>
-            <p>A NodeJS Course on building a blog</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
-    <div>
-        <form>
-            <label for="title">Blog Title:</label>
-            <input type="text" name="title" id="title" required>
-            <label for="snippet">Blog Snippet</label>
-            <input type="text" name="snippet" id="snippet" required>
-            <label for="body">Blog Body</label>
-            <textarea name="body" id="body" required></textarea>
-            <button>Submit</button>
-        </form>
-        
-    </div>
+    <section class="create">
+        <%- include('./partials/nav.ejs')  %>
+            <form class="">
+                <label for="title">Blog Title:</label>
+                <input type="text" name="title" id="title" required>
+                <label for="snippet">Blog Snippet</label>
+                <input type="text" name="snippet" id="snippet" required>
+                <label for="body">Blog Body</label>
+                <textarea name="body" id="body" required></textarea>
+                <button>Submit</button>
+            </form>
+
+        <%- include('./partials/footer.ejs')  %>
+    </section>
 
     
 </body>
