--- a/lesson2/views/index.ejs
+++ b/lesson2/views/index.ejs
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecode's Blogs | <%= title %></title>
-</head>
+    <%- include('./partials/head.ejs')  %>
 <body>
-    <nav>
-        <div>
-            <a href="/">Ecode's Blog</a>
-            <p>A NodeJS Course on building a blog</p>
+    <section class="main_page">
+        <%- include('./partials/nav.ejs')  %>
+
+        <div class="hero">
+            <h1>EcodeJR's</h1>
+            <h3>Blog</h3>
         </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
-    <div>
-        <h1>All Blogs</h1>
+        <div class="content">
+            <h1>All Blogs</h1>
 
-        <%  if(blogs.length > 0) { %>
-            <%  blogs.forEach(blog => {   %>
-                <h3><%=  blog.title  %></h3>
-                <p><%=  blog.snippet  %></p>
-            <% }) %>
-        <% } else { %>
-            <p>You've not added any blogs :(</p>
-        <% } %>
-    </div>
-
-    
+            <div class="blogs_list">
+                    <%  if(blogs.length > 0) { %>
+                        <%  blogs.forEach(blog => {   %>
+                            <div class="blog_item">
+                                <h3><%=  blog.title  %></h3>
+                                <p><%=  blog.snippet  %></p>
+                            </div>
+                        <% }) %>
+                    <% } else { %>
+                        <div class="blog_item">
+                            <p>You've not added any blogs :(</p>
+                        </div>
+                    <% } %>
+            </div>
+            
+        </div>
+        <%- include('./partials/footer.ejs')  %>
+    </section>
 </body>
 </html>
