--- a/lesson2/views/create.ejs
+++ b/lesson2/views/create.ejs
@@ -4,7 +4,7 @@
 <body>
     <section class="create">
         <%- include('./partials/nav.ejs')  %>
-            <form class="">
+            <form class="" action="/blogs" method="post">
                 <label for="title">Blog Title:</label>
                 <input type="text" name="title" id="title" required>
                 <label for="snippet">Blog Snippet</label>
