--- a/lesson2/views/index.ejs
+++ b/lesson2/views/index.ejs
@@ -16,8 +16,11 @@
                     <%  if(blogs.length > 0) { %>
                         <%  blogs.forEach(blog => {   %>
                             <div class="blog_item">
-                                <h3><%=  blog.title  %></h3>
-                                <p><%=  blog.snippet  %></p>
+                                <a href="/blogs/<%= blog._id %>">
+                                    <h3><%=  blog.title  %></h3>
+                                    <p><%=  blog.snippet  %></p>
+                                    <p><%= blog.body %></p>
+                                </a>
                             </div>
                         <% }) %>
                     <% } else { %>
