--- a/lesson2/views/blogs/index.ejs
+++ b/lesson2/views/blogs/index.ejs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('./partials/head.ejs')  %>
+    <%- include('../partials/head.ejs')  %>
 <body>
     <section class="main_page">
-        <%- include('./partials/nav.ejs')  %>
+        <%- include('../partials/nav.ejs')  %>
 
         <div class="hero">
             <h1>EcodeJR's</h1>
@@ -31,7 +31,7 @@
             </div>
             
         </div>
-        <%- include('./partials/footer.ejs')  %>
+        <%- include('../partials/footer.ejs')  %>
     </section>
 </body>
 </html>
